# ZapGuard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.py  pyproject.toml  requirements.txt  run_cli.py  run_gui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
zapguard/: __init__.py  cli.py  config.py  gui.py  http_client.py  models.py  parsers.py  reports.py  verifier.py  vulnerability_tests.py
