[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapguard"
version = "1.0.0"
description = "A professional GUI tool for verifying ZAP vulnerability fixes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Viswa Vengata Baalan M", email = "vishwabaalan17@gmail.com"}
]
keywords = ["security", "zap", "owasp", "vulnerability", "testing", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vishwabaalan07/zapguard"
Documentation = "https://github.com/vishwabaalan07/zapguard#readme"
Repository = "https://github.com/vishwabaalan07/zapguard.git"
Issues = "https://github.com/vishwabaalan07/zapguard/issues"

[project.scripts]
zapguard = "zapguard.gui:main"
zapguard-cli = "zapguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zapguard*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
